--- a/smart keyword search Extension/Resources/popup.html
+++ b/smart keyword search Extension/Resources/popup.html
@@ -15,7 +15,7 @@
         Smart Keyword Search is an extension that redirects searches with a specific pattern to specific sites. For instance, it can be configured so that all searches starting with <code>am&nbsp;</code> are sent to the amazon website, and all searches starting with <code>p&nbsp;</code> to the python documentation.
     </p>
     <p>
-        Please visit our <a href="https://d1agrx7y9zlyta.cloudfront.net/" target="_blank">help page</a> to get an extensive walk-through, see usage examples and leave questions, comments or suggestions.
+        Please visit our <a href="https://sks.claude-apps.com/" target="_blank">help page</a> to get an extensive walk-through, see usage examples and leave questions, comments or suggestions.
     </p>
         <a class="more" href="javascript:void(0)">[more]</a>
     </div>
@@ -59,7 +59,7 @@
             </tbody>
         </table>
     </div>
-    <div id="rulesfooter" class="sub">Error, startup failed. See <a href="https://d1agrx7y9zlyta.cloudfront.net/#troubleshooting" target="_blank">troubleshooting</a>.</div>
+    <div id="rulesfooter" class="sub">Error, startup failed. See <a href="https://sks.claude-apps.com/#troubleshooting" target="_blank">troubleshooting</a>.</div>
 </div>
 
 <div id="editpage" class="modal hidden">
@@ -80,7 +80,7 @@
                 <p class="advanced-only">
                     <span class="warningicon"></span>You're in advanced editing mode<span class="warningicon"></span>
                     <span class="sub">
-                        Please make sure you have read the <a href="https://d1agrx7y9zlyta.cloudfront.net/#advancedrules" target="_blank">help section on advanced rules</a>.
+                        Please make sure you have read the <a href="https://sks.claude-apps.com/#advancedrules" target="_blank">help section on advanced rules</a>.
                     </span>
                 </p>
                 <input type="hidden" name="id" />
