email address on website; v1.0.1 build 4 for release

--- a/website/index.html
+++ b/website/index.html
@@ -316,7 +316,7 @@
             This data is processed in order to reply to your email, and identify you in case of future email conversations.
         </p>
         <p>
-            If you want to exercise your rights under the GDPR Privacy laws, or have any questions, please email to privacy@(domain of this website).
+            If you want to exercise your rights under the GDPR Privacy laws, or have any questions, please email to privacy-sks@claude.nl.
         </p>
 
         <h2 id="troubleshooting">Troubleshooting</h2>
@@ -401,7 +401,7 @@
 
         <h2 id="contact">Contact</h2>
         <p>
-            I'm currently working out a good way to contact me (with a form or something). Until then, you may send me an email on info@(domain of this site).
+            I'm currently working out a good way to contact me (with a form or something). Until then, you may send me an email on info-sks@claude.nl.
         </p>
     </body>
 </html>
