update message on website

--- a/website/index.html
+++ b/website/index.html
@@ -10,9 +10,8 @@
     <body>
         <h1>Smart Keyword Search</h1>
         <div class="note">
-            <strong>Update 2023-03-31:</strong> It seems that Apple changed some things in MacOS 13.3, which means the extension doesn't work on this version.
-            I'm looking into this issue right now, and promise to come with an update in the next couple of days (most likely an update to the extension, which
-            will take another couple of days for Apple to approve). Sorry that you all (and me too :)) have to miss the extension in the meantime!
+            <strong>Update 2023-03-31:</strong> It seems that Apple changed some things in Safari 16.4 (which you get with MacOS 13.3), which means the extension doesn't work at the moment.
+            A new version (v1.5) has been submitted to the App Store in order to resolve the issue; I hope it will be accepted soon!
         </div>
         <h2>Table of contents</h2>
         <div id="toc">
