--- a/website/index.html
+++ b/website/index.html
@@ -10,8 +10,8 @@
     <body>
         <h1>Smart Keyword Search</h1>
         <div class="note">
-            <strong>Update 2023-03-31:</strong> It seems that Apple changed some things in Safari 16.4 (which you get with MacOS 13.3), which means the extension doesn't work at the moment.
-            A new version (v1.5) has been submitted to the App Store in order to resolve the issue; I hope it will be accepted soon!
+            If you're using MacOS 13.3 (Safari 16.4), make sure to run at least version 1.5 of the extension (update through the App Store).
+            Safari 16.4 brought some changes, and Smart Keyword Search 1.4 does not work with Safari 16.4.
         </div>
         <h2>Table of contents</h2>
         <div id="toc">
