--- a/website/index.html
+++ b/website/index.html
@@ -11,8 +11,13 @@
     <body>
         <h1>Smart Keyword Search</h1>
         <div class="note">
-            If you're using MacOS 13.3 (Safari 16.4), make sure to run at least version 1.5 of the extension (update through the App Store).
-            Safari 16.4 brought some changes, and Smart Keyword Search 1.4 does not work with Safari 16.4.
+            If you're using MacOS Sequoia 15.0 (Safari 18.0), released September 2024 make sure to run at least version 1.6 or higher of the extension (update through the App Store).
+            Safari 18 has a change (possibly a bug) that means that Smart Keyword Search 1.5 does not work if a tab has just opened.
+            With version 1.6, you will sometimes see that <em>first</em> the whole of the search engine page is loaded, and only then the redirect to your defined page happens.
+            I am working on a solution for this. 
+            <div>
+              An additional bug on my side means that sks version 1.6 actually shows "1.5" as a version number in the safari extensions page. This is fixed in 1.6.1 (which will probably receive App Store Approval and be available on 1 October).
+            </div>
         </div>
         <h2>Table of contents</h2>
         <div id="toc">
