--- a/smart keyword search Extension/Resources/popup.html
+++ b/smart keyword search Extension/Resources/popup.html
@@ -12,7 +12,7 @@
         <img id="logo" src="images/icon-128.png" />
         <h2 id="title">Smart Keyword Search</h2>
         <div id="rules">
-            <h3>Rules</h3>
+            <h3>Rules1</h3>
             <div id="ruletablebuttons">
                 <picture>
                       <source
